dev (#126)
* Updated config

* Minor fixes

* Add more persons

* Switch Domain

* Cleanup

* Minor improvements to the generated HTML | use simple sync instead of browserify for performance reasons

* Add a limit to the images, which are displayed in an image gallery

* fix build...

* fix test...

* Minor display improvements

* Start with a config ui app based on Compose for desktop

* Rewrite config UI in compose

* Finish rewrite (files can now be saved as well) & made production ready

* Improve Menu behaviour

* Used Config UI for the first time

* Update npm dependencies

* Improve UI for gallery-next and ghenerate a new next-cli submodule

* Switch to Next JS

* First final version of next-cli

* Cleanup....

* Fix test

* More cleanup

* Improve JSON for gallery.reisinger.pictures

* Further cleanup and better JSON generation

* Further cleanup and better JSON generation

* Add new categories

* Fix local run config path